test/sema/exercise/struct_member_initialized_with_itself.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number
}

fn main(): unit {
  let s = S { x: x };
  // CHECK: [[# @LINE - 1 ]]:18: error: symbol 'x' not found
}
